[gd_scene load_steps=24 format=2]

[ext_resource path="res://Images/blank.png" type="Texture" id=1]
[ext_resource path="res://Images/GuruSprites/AnimationSheet_Character.png" type="Texture" id=2]
[ext_resource path="res://Reusable Scenes/dialogue.tscn" type="PackedScene" id=3]
[ext_resource path="res://Images/Vampire_Girl/Walk/Walk1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/graphTutorial.gd" type="Script" id=5]
[ext_resource path="res://Font/font_theme.tres" type="Theme" id=6]
[ext_resource path="res://Images/graphNode.png" type="Texture" id=7]
[ext_resource path="res://Images/graphEdge.png" type="Texture" id=8]
[ext_resource path="res://Images/Vampire_Girl/Walk/Walk6.png" type="Texture" id=9]
[ext_resource path="res://Images/Vampire_Girl/Walk/Walk4.png" type="Texture" id=10]
[ext_resource path="res://Images/Vampire_Girl/Walk/Walk2.png" type="Texture" id=11]
[ext_resource path="res://Images/Vampire_Girl/Walk/Walk3.png" type="Texture" id=12]
[ext_resource path="res://Images/Vampire_Girl/Walk/Walk5.png" type="Texture" id=13]
[ext_resource path="res://Font/unispace bd.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Images/dijkstra.jpg" type="Texture" id=15]
[ext_resource path="res://Images/dijkstraAlgo.png" type="Texture" id=16]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=6]
size = 31
font_data = ExtResource( 14 )

[sub_resource type="ShaderMaterial" id=7]

[node name="graphTutorial" type="Control"]
rect_pivot_offset = Vector2( -404, -49 )
script = ExtResource( 5 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -100

[node name="TextureRect" type="TextureRect" parent="Background"]
modulate = Color( 0.741176, 0.756863, 0.768627, 1 )
margin_right = 1276.0
margin_bottom = 720.0
texture = ExtResource( 1 )
expand = true

[node name="Guru" type="Area2D" parent="."]
visible = false
position = Vector2( 56, 360 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Guru"]
position = Vector2( 6.5, -8.50002 )
scale = Vector2( 2.65625, 2.78125 )
frames = SubResource( 3 )
animation = "idle"
frame = 1
speed_scale = 0.3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Guru"]

[node name="dialogue" parent="." instance=ExtResource( 3 )]
d_file = "res://Dialogues/Graph/graphGameTutorial.json"

[node name="NinePatchRect" parent="dialogue" index="0"]
rect_clip_content = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="gohomeBtn" type="Button" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 114.0
margin_bottom = 64.0
theme = ExtResource( 6 )
text = "Go Home"

[node name="Graph" type="CanvasLayer" parent="."]

[node name="Node" type="TextureRect" parent="Graph"]
margin_left = 114.0
margin_top = 342.0
margin_right = 214.0
margin_bottom = 442.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Node2" type="TextureRect" parent="Graph"]
margin_left = 265.0
margin_top = 341.0
margin_right = 365.0
margin_bottom = 441.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Node3" type="TextureRect" parent="Graph"]
margin_left = 114.0
margin_top = 488.0
margin_right = 214.0
margin_bottom = 588.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Node4" type="TextureRect" parent="Graph"]
margin_left = 265.0
margin_top = 489.0
margin_right = 365.0
margin_bottom = 589.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Node5" type="TextureRect" parent="Graph"]
margin_left = 166.0
margin_top = 600.0
margin_right = 266.0
margin_bottom = 700.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Edge" type="TextureRect" parent="Graph"]
margin_left = 269.0
margin_top = 315.0
margin_right = 369.0
margin_bottom = 415.0
rect_rotation = 90.0718
rect_scale = Vector2( 1, 1.2 )
texture = ExtResource( 8 )

[node name="Edge2" type="TextureRect" parent="Graph"]
margin_left = 270.0
margin_top = 462.0
margin_right = 370.0
margin_bottom = 562.0
rect_rotation = 90.0718
rect_scale = Vector2( 1, 1.2 )
texture = ExtResource( 8 )

[node name="Edge3" type="TextureRect" parent="Graph"]
margin_left = 236.0
margin_top = 376.0
margin_right = 336.0
margin_bottom = 476.0
rect_scale = Vector2( 1, 1.2 )
texture = ExtResource( 8 )

[node name="Edge4" type="TextureRect" parent="Graph"]
margin_left = 85.0
margin_top = 376.0
margin_right = 185.0
margin_bottom = 476.0
rect_scale = Vector2( 1, 1.2 )
texture = ExtResource( 8 )

[node name="Edge5" type="TextureRect" parent="Graph"]
margin_left = 240.0
margin_top = 489.0
margin_right = 340.0
margin_bottom = 589.0
rect_rotation = 41.1193
rect_scale = Vector2( 1, 1.2 )
texture = ExtResource( 8 )

[node name="player" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 69.5, 313 )
scale = Vector2( 1.88281, 1.84375 )
frames = SubResource( 4 )
animation = "walk"

[node name="dijkstra" type="TextureRect" parent="."]
visible = false
margin_left = 197.0
margin_top = 321.0
margin_right = 1000.0
margin_bottom = 1388.0
rect_scale = Vector2( 0.35, 0.35 )
mouse_filter = 2
texture = ExtResource( 15 )

[node name="dijkstraText" type="Label" parent="dijkstra"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 929.0
margin_top = 143.0
margin_right = 2697.0
margin_bottom = 780.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 5 )
text = "Edsger W. Dijkstra,
Creator of the Dijkstra shortest path algorithm"
autowrap = true

[node name="application" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 210.0
margin_top = 337.0
margin_right = 1046.0
margin_bottom = 662.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 6 )
text = "Some applications of Dijkstra's Algorithm:
1) GPS navigation systems
2) Transportation and logistics optimization
3) Airline flight route planning
4) Pathfinding in video games
5) Robot motion planning
6) Traffic flow optimization"

[node name="algorithm" type="TextureRect" parent="."]
visible = false
material = SubResource( 7 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = 330.0
margin_right = 1446.0
margin_bottom = 678.0
rect_scale = Vector2( 0.8, 0.9 )
mouse_filter = 2
texture = ExtResource( 16 )

[node name="algorithm2" type="TextureRect" parent="."]
material = SubResource( 7 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 464.0
margin_top = 352.0
margin_right = 1782.0
margin_bottom = 700.0
rect_scale = Vector2( 0.6, 0.8 )
mouse_filter = 2
texture = ExtResource( 16 )

[connection signal="button_up" from="gohomeBtn" to="." method="_on_gohomeBtn_button_up"]

[editable path="dialogue"]
